Fix overlapping content of company-summary section by changing height to fit-content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,11 +66,11 @@
 /*company summary*/
 
   #company-summary {
-    height: 500px;
+    height:max-content;
     width: 100%;
     text-align: center;
     padding-top: 0px;
-    
+    margin: 0;
   }
 
   #company-summary-heading {
@@ -120,6 +120,7 @@
   #reviews {
     height: 600px;
     background-color: #1ea896;
+    margin: auto;
   }
 
 /*contact form*/
@@ -185,7 +186,7 @@
 
   #company-summary {
     width: 100%;
-    height: 600px;
+    height: fit-content;
     margin: 0 auto;
   }
 
